--- a/ansible-setup-kubernetes/setup_kube_master.yml
+++ b/ansible-setup-kubernetes/setup_kube_master.yml
@@ -5,7 +5,7 @@
 
     - name: Init Kubernetes master configuration
       command: |
-        kubeadm init --pod-network-cidr=10.244.0.0/16
+        kubeadm init --pod-network-cidr=10.244.0.0/16 --apiserver-cert-extra-sans="{{hostvars['kube-master'].ansible_host}},kubernetes,kubernetes.cluster,kubernetes.cluster.local"
       register: init_output
       become: true
     
@@ -40,12 +40,12 @@
     - name: Save join script
       local_action: copy content="{{ join_script[0] }}" dest=./data/join_script
 
-    - name: Setup kubernetes admin configuration for current user
-      shell: |
-        mkdir -p $HOME/.kube
-        sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
-        sudo chown $(id -u):$(id -g) $HOME/.kube/config
-      become: true
+    # - name: Setup kubernetes admin configuration for current user
+    #   shell: |
+    #     mkdir -p $HOME/.kube
+    #     sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
+    #     sudo chown $(id -u):$(id -g) $HOME/.kube/config
+    #   become: true
 
     - name: Setup Flannel
       command: |
